--- a/css/mywheels.css
+++ b/css/mywheels.css
@@ -4,7 +4,8 @@ body{
 }
 #searcharea{
 	
-	margin: 0 auto;
+	margin-left: 15%;
+	margin-top: 10%;
 	text-align: center;
 	background: #BF996B;
 	padding: 10px;
@@ -79,10 +80,10 @@ body{
 	overflow: visible;
 }
 
-#update h2 {
+#update h6 {
 	margin: 0;
 	padding: 0;
-	font-size: 1.2em;
+	font-size: 0.6em;
 	padding-bottom: 5px;
 	padding-top: 20px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -97,7 +98,7 @@ body{
 	margin-right: 10px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
-	border-radius: 1px dotted #CCC;
+	border-radius: 10px;
 }
 
 @-webkit-keyframes myanim {
@@ -133,8 +134,8 @@ body{
 }
 
 #tabs{ 
-    padding:0; 
-    margin:0; 
+    padding:5px;
+	margin-left: 15%;
     font-family:Arial, Helvetica, sans-serif; 
     font-size:12px; 
     color:#FFF; 
